--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "chart.js": "^4.4.8",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "lucide-react": "^0.483.0",
     "multer": "^1.4.5-lts.1",
     "next": "15.2.3",
     "react": "^19.0.0",
